--- a/fillPaintMaster/TDBeautyTableViewCell.xib
+++ b/fillPaintMaster/TDBeautyTableViewCell.xib
@@ -26,7 +26,7 @@
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F3k-Uk-AhM">
+                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F3k-Uk-AhM">
                         <rect key="frame" x="259" y="12" width="44" height="40"/>
                         <animations/>
                         <state key="normal" image="addcart"/>
