--- a/fillPaintMaster/Base.lproj/Main.storyboard
+++ b/fillPaintMaster/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="inS-cJ-hHk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="inS-cJ-hHk">
     <dependencies>
         <deployment identifier="iOS"/>
         <development version="6000" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--Item-->
@@ -852,7 +852,7 @@
         <!--Item-->
         <scene sceneID="6aX-6w-o54">
             <objects>
-                <viewController id="cxd-r9-fhz" sceneMemberID="viewController">
+                <viewController id="cxd-r9-fhz" customClass="TDUserCenterViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="txc-PC-9Gc"/>
                         <viewControllerLayoutGuide type="bottom" id="lYZ-ql-N3X"/>
@@ -860,20 +860,35 @@
                     <view key="view" contentMode="scaleToFill" id="7Tf-7q-Y2f">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9l4-GZ-7jT">
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.71682453459999995" green="1" blue="0.60469191280000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="9l4-GZ-7jT" firstAttribute="top" secondItem="txc-PC-9Gc" secondAttribute="bottom" id="0m3-Rt-n9k"/>
+                            <constraint firstItem="9l4-GZ-7jT" firstAttribute="leading" secondItem="7Tf-7q-Y2f" secondAttribute="leading" id="KQS-qI-lt4"/>
+                            <constraint firstItem="9l4-GZ-7jT" firstAttribute="bottom" secondItem="lYZ-ql-N3X" secondAttribute="top" id="Lbr-XR-zLe"/>
+                            <constraint firstAttribute="trailing" secondItem="9l4-GZ-7jT" secondAttribute="trailing" id="xMj-lb-WBx"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="GlE-nm-tee"/>
+                    <connections>
+                        <outlet property="tableView" destination="9l4-GZ-7jT" id="fA1-cO-RJ5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pUa-dZ-ZGE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-128" y="1191"/>
+            <point key="canvasLocation" x="-118" y="1195"/>
         </scene>
         <!--Tab View Controller-->
         <scene sceneID="Zgj-67-TNH">
             <objects>
                 <tabBarController id="Ei4-d7-fo5" customClass="TDTabViewController" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="ZVF-bt-KZU"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="PHk-bK-sqH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -907,24 +922,6 @@
             </objects>
             <point key="canvasLocation" x="-689" y="361"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="Dpm-EB-X9C">
-            <objects>
-                <viewController id="azn-nw-rc3" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="YiU-XA-WLN"/>
-                        <viewControllerLayoutGuide type="bottom" id="c2p-8V-xva"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="BVo-94-IwP">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LWk-ML-n8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
     </scenes>
     <resources>
         <image name="btn_line" width="118" height="31"/>
@@ -933,4 +930,9 @@
         <image name="line" width="253" height="5"/>
         <image name="success" width="320" height="160"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
