界面部分修改2

--- a/fillPaintMaster/Base.lproj/Main.storyboard
+++ b/fillPaintMaster/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.98978365384615385" green="0.98978365384615385" blue="0.98978365384615385" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="0DV-hE-sVg"/>
                     <navigationItem key="navigationItem" id="146-yw-1Ug"/>
@@ -844,7 +844,7 @@
         <!--Item-->
         <scene sceneID="ts3-eK-y98">
             <objects>
-                <viewController id="g13-Fw-1h4" sceneMemberID="viewController">
+                <viewController id="g13-Fw-1h4" customClass="TDStoreViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IW0-k0-ZJF"/>
                         <viewControllerLayoutGuide type="bottom" id="2z4-8j-it5"/>
@@ -852,8 +852,25 @@
                     <view key="view" contentMode="scaleToFill" id="iRF-3A-A4g">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="附近没有门店" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nbU-6g-ijh">
+                                <rect key="frame" x="90" y="239" width="140" height="90"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="J0x-9h-gII"/>
+                                    <constraint firstAttribute="height" constant="90" id="U7a-Ca-JjN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.78164003584358976" green="0.78164003584358976" blue="0.78164003584358976" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="nbU-6g-ijh" firstAttribute="centerY" secondItem="iRF-3A-A4g" secondAttribute="centerY" id="HXu-k4-OYu"/>
+                            <constraint firstItem="nbU-6g-ijh" firstAttribute="centerX" secondItem="iRF-3A-A4g" secondAttribute="centerX" id="lYt-9D-N9g"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="ODi-5O-uZd"/>
                 </viewController>
@@ -881,6 +898,43 @@
             </objects>
             <point key="canvasLocation" x="-118" y="1195"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="Cbm-3h-rJ0">
+            <objects>
+                <viewController id="rOu-8t-P5Q" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kmV-bH-MXO"/>
+                        <viewControllerLayoutGuide type="bottom" id="0wH-vm-thu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LIR-9z-6dx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="没有活动" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMa-Nf-mqB">
+                                <rect key="frame" x="83" y="235" width="155" height="97"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="97" id="mvp-3n-1wH"/>
+                                    <constraint firstAttribute="width" constant="155" id="zBZ-ZF-ocl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.48920272435897438" green="0.48920272435897438" blue="0.48920272435897438" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="OMa-Nf-mqB" firstAttribute="centerY" secondItem="LIR-9z-6dx" secondAttribute="centerY" id="43i-rW-5mp"/>
+                            <constraint firstItem="OMa-Nf-mqB" firstAttribute="centerX" secondItem="LIR-9z-6dx" secondAttribute="centerX" id="iFC-gc-UjR"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="EpI-Hb-jJT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ydk-2D-JoX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="221" y="1205"/>
+        </scene>
         <!--Tab View Controller-->
         <scene sceneID="Zgj-67-TNH">
             <objects>
@@ -897,6 +951,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="v33-Al-ZI2"/>
                         <segue destination="g13-Fw-1h4" kind="relationship" relationship="viewControllers" id="hFR-eE-hrY"/>
                         <segue destination="cxd-r9-fhz" kind="relationship" relationship="viewControllers" id="RJH-8i-rk2"/>
+                        <segue destination="rOu-8t-P5Q" kind="relationship" relationship="viewControllers" id="f9D-xn-Wmv"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d6a-bE-MmT" userLabel="First Responder" sceneMemberID="firstResponder"/>
