--- a/fillPaintMaster/Base.lproj/Main.storyboard
+++ b/fillPaintMaster/Base.lproj/Main.storyboard
@@ -901,7 +901,7 @@
         <!--Item-->
         <scene sceneID="Cbm-3h-rJ0">
             <objects>
-                <viewController id="rOu-8t-P5Q" sceneMemberID="viewController">
+                <viewController id="rOu-8t-P5Q" customClass="TDActiveViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kmV-bH-MXO"/>
                         <viewControllerLayoutGuide type="bottom" id="0wH-vm-thu"/>
@@ -933,7 +933,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ydk-2D-JoX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="221" y="1205"/>
+            <point key="canvasLocation" x="316" y="1188"/>
         </scene>
         <!--Tab View Controller-->
         <scene sceneID="Zgj-67-TNH">
